ryk flere kort på en gang og fjerne flere kort på en gang